Fix: hour autocomplete is too long in generic context

--- a/htdocs/styles/src/ui/autocomplete.scss
+++ b/htdocs/styles/src/ui/autocomplete.scss
@@ -1,6 +1,10 @@
 div.evq-autocomplete {
 	display: inline-block;
 	
+	&.hour {
+		width: 6em !important;
+	}
+	
 	div {
 		border: 1px solid grey;
 		border-radius: 0.4rem;
